generator client {
  provider = "prisma-client-js"
  output   = "../node_modules/.prisma/client"
}

generator markdown {
  provider = "prisma-markdown"
  output   = "./generated/ERD.md"
  title    = "Votist"
}

generator zod {
  provider         = "zod-prisma-types"
  output           = "./generated/zod"
  useMultipleFiles = true
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Assembly {
  id          String   @id @default(cuid())
  title       String
  description String
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  status      String   @default("draft") // draft, active, closed
  topic       String
  location    String?
  votes       Int      @default(0)
}

enum QuizDifficulty {
  VOTIST
  SCHOLAR
  MENTOR
}

model Quiz {
  id                   String          @id @default(cuid())
  title                String
  description          String
  passingScore         Int
  difficulty           QuizDifficulty? @default(VOTIST)
  associatedMaterialId String?
  order                Int             @default(0)
  questions            Question[]
  userProgress         UserProgress[]
  createdAt            DateTime        @default(now())
  updatedAt            DateTime        @updatedAt

  @@index([difficulty, order])
}

model Question {
  id            String   @id @default(cuid())
  quizId        String
  quiz          Quiz     @relation(fields: [quizId], references: [id])
  text          String
  type          String
  imageUrl      String?
  imageAlt      String?
  videoUrl      String?
  options       Json
  correctAnswer Json
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}

enum QuizStatus {
  LOCKED
  AVAILABLE
  IN_PROGRESS
  COMPLETED
}

model UserProgress {
  id          String    @id @default(cuid())
  userId      String
  user        User      @relation(fields: [userId], references: [clerkId])
  materialId  String
  quizId      String
  quiz        Quiz      @relation(fields: [quizId], references: [id])
  quizScore   Int
  answers     Json?
  isCompleted Boolean   @default(false)
  completedAt DateTime?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  @@unique([userId, quizId])
}

model User {
  clerkId      String         @id
  email        String?        @unique
  isAdmin      Boolean        @default(false)
  userProgress UserProgress[]
  posts        Post[]
  comments     Comment[]
  votes        Vote[]
  postLikes    PostLike[]
  commentLikes CommentLike[]
  createdAt    DateTime       @default(now())
  updatedAt    DateTime       @updatedAt
}

model Post {
  id           String     @id @default(cuid())
  title        String
  content      String
  authorId     String
  author       User       @relation(fields: [authorId], references: [clerkId])
  category     String
  tags         String[]
  likes        Int        @default(0)
  comments     Comment[]
  votes        Vote[]
  postLikes    PostLike[]
  poll         Poll?
  isBookmarked Boolean    @default(false)
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt

  @@index([authorId])
  @@index([category])
  @@index([createdAt])
}

model Poll {
  id                 String          @id @default(cuid())
  postId             String          @unique
  post               Post            @relation(fields: [postId], references: [id], onDelete: Cascade)
  question           String
  requiredDifficulty QuizDifficulty? // Minimum quiz difficulty required to vote
  options            PollOption[]
  totalVotes         Int             @default(0)
  endsAt             DateTime?
  createdAt          DateTime        @default(now())
  updatedAt          DateTime        @updatedAt
}

model PollOption {
  id        String   @id @default(cuid())
  pollId    String
  poll      Poll     @relation(fields: [pollId], references: [id], onDelete: Cascade)
  text      String
  votes     Int      @default(0)
  userVotes Vote[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([pollId])
}

model Comment {
  id            String        @id @default(cuid())
  content       String
  authorId      String
  author        User          @relation(fields: [authorId], references: [clerkId])
  postId        String
  post          Post          @relation(fields: [postId], references: [id], onDelete: Cascade)
  parentId      String?
  parent        Comment?      @relation("CommentReplies", fields: [parentId], references: [id])
  replies       Comment[]     @relation("CommentReplies")
  rootCommentId String? // Points to the original comment in the thread
  rootComment   Comment?      @relation("CommentThread", fields: [rootCommentId], references: [id])
  threadReplies Comment[]     @relation("CommentThread")
  likes         Int           @default(0)
  commentLikes  CommentLike[]
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt

  @@index([authorId])
  @@index([postId])
  @@index([parentId])
  @@index([rootCommentId])
}

model Vote {
  id        String     @id @default(cuid())
  userId    String
  user      User       @relation(fields: [userId], references: [clerkId])
  postId    String
  post      Post       @relation(fields: [postId], references: [id], onDelete: Cascade)
  optionId  String
  option    PollOption @relation(fields: [optionId], references: [id], onDelete: Cascade)
  createdAt DateTime   @default(now())

  @@unique([userId, postId])
  @@index([userId])
  @@index([postId])
  @@index([optionId])
}

model PostLike {
  id        String   @id @default(cuid())
  userId    String
  user      User     @relation(fields: [userId], references: [clerkId])
  postId    String
  post      Post     @relation(fields: [postId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())

  @@unique([userId, postId])
  @@index([userId])
  @@index([postId])
}

model CommentLike {
  id        String   @id @default(cuid())
  userId    String
  user      User     @relation(fields: [userId], references: [clerkId])
  commentId String
  comment   Comment  @relation(fields: [commentId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())

  @@unique([userId, commentId])
  @@index([userId])
  @@index([commentId])
}
